src/components/Structure/Viewer/style.css
.viewer-resizer {
  height: 95%;

  & .structure-and-label {
    height: 100%;
    background: white;

    & .structure-viewer-ref {
      align-items: center;
      justify-content: center;
      height: 90%;
      position: relative;

      & .loading-overlay {
        position: absolute;
        top: 0;
        left: 0;
        right: 0;
        bottom: 0;
        display: flex;
        align-items: center;
        justify-content: center;
        background: white;
      }
    }

    & .structure-label {
      height: 1em;
    }
  }
}

:global(.split-view) .structure-viewer-ref {
  max-width: 50vw;
}

